import AbstractPayment from "./AbstractPayment";

export default class CashPayment extends AbstractPayment {
}
