enum PaymentStatus {
  PENDING,
  PAYED,
  REFUND,
}

export default PaymentStatus;
