import AbstractService from "./AbstractService";

export default class RoadsideAssistant extends AbstractService {
}
