import AbstractService from "./AbstractService";

export default class WiFi extends AbstractService {
}
