import AbstractVehicle from "./AbstractVehicle";
import CarType from "./Enums/CarType";

export default class Car extends AbstractVehicle<CarType> {
}
