enum CarType {
  ECONOMY,
  LUXURY,
  STANDARD,
  COMPACT
}

export default CarType;
