enum MotorcycleType {
  CRUISER,
  TOURING,
  SPORT,
}

export default MotorcycleType;
