enum TruckType {
  LIGHT,
  MEDIUM,
  HIGH_DUTY,
}

export default TruckType;
