enum VanType {
  PASSENGER,
  CARGO,
}

export default VanType;
