import AbstractEquipment from "./AbstractEquipment";

export default class SkiRack extends AbstractEquipment {
}
