import AbstractService from "./AbstractService";

export default class Driver extends AbstractService {
}
