import Vehicle from "./Vehicle";

export default class Truck extends Vehicle {

}
