import Vehicle from "./Vehicle";

export default class Van extends Vehicle {

}
